week2 tasts are changed