@@ -2,16 +2,16 @@ package bg.fmi.course.wdwj.repository;
 
 import bg.fmi.course.wdwj.model.Book;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Repository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 
 @Service
-public class BookRepositoryImpl implements BookRepository{
+public class BookRepositoryImpl implements BookRepository {
     private Map<String, Book> db = new ConcurrentHashMap<>();
 
     @Autowired
@@ -24,14 +24,17 @@ public class BookRepositoryImpl implements BookRepository{
     }
 
     @Override
-    public Book getByIsbn(){
-
+    public List<Book> getBooks() {
+        return db.values()
+                .stream()
+                .toList();
     }
 
     @Override
-    public List<Book> getBooks(){
-        return db.values().stream().toList();
+    public Book getByIsbn(String isbn) {
+        return (Book) db.values()
+                .stream()
+                .filter(book -> book.getIsbn().equals(isbn))
+                .collect(Collectors.toList());
     }
-
-
 }
